--- a/app/src/main/res/layout/fragment_create_request.xml
+++ b/app/src/main/res/layout/fragment_create_request.xml
@@ -11,12 +11,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="10dp">
+        android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@drawable/shadow_card"
+            android:layout_margin="10dp"
+            android:elevation="5dp"
+            android:padding="10dp">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/createRequestName"
                 android:layout_width="match_parent"
@@ -27,7 +30,7 @@
                 android:fontFamily="@font/montserrat_regular"
                 android:textColor="@color/sDark"
                 android:textColorHint="@color/sLight"
-                android:textSize="24sp"/>
+                android:textSize="20sp"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
@@ -38,12 +41,14 @@
             android:textColor="@color/pLight"
             android:textSize="14sp"
             android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="10dp"
             android:layout_marginBottom="5dp"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/createRequestCategoryRecycler"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp">
 
         </androidx.recyclerview.widget.RecyclerView>
 
@@ -62,23 +67,38 @@
             android:textColor="@color/pLight"
             android:fontFamily="@font/montserrat_medium"
             android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
             android:layout_marginBottom="5dp"/>
 
-        <com.google.android.material.textfield.TextInputLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/createRequestDescription"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:padding="10dp"
+            android:background="@drawable/shadow_card"
+            android:elevation="5dp"
+            android:orientation="vertical">
+
+
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="textMultiLine"
-                android:hint="@string/description"
-                android:imeOptions="actionNext"
-                android:fontFamily="@font/montserrat_regular"
-                android:textColor="@color/sDark"
-                android:textColorHint="@color/sLight"
-                android:textSize="20sp"/>
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_height="match_parent">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/createRequestDescription"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="textMultiLine"
+                    android:hint="@string/description"
+                    android:imeOptions="actionNext"
+                    android:fontFamily="@font/montserrat_regular"
+                    android:textColor="@color/sDark"
+                    android:textColorHint="@color/sLight"
+                    android:textSize="18sp"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </LinearLayout>
+
 
         <LinearLayout
             android:id="@+id/createRequestShoppingList"
@@ -90,10 +110,14 @@
 
         <Button
             android:id="@+id/createRequestCreateBT"
-            style="@android:style/Widget.Material.Button.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/create" />
+            android:text="@string/create"
+            android:textColor="@color/white"
+            android:fontFamily="@font/montserrat_regular"
+            android:background="@drawable/button"
+            android:backgroundTint="@color/secondary"
+            android:layout_margin="10dp"/>
 
     </LinearLayout>
 </ScrollView>
