--- a/app/src/main/res/layout/fragment_request_details.xml
+++ b/app/src/main/res/layout/fragment_request_details.xml
@@ -1,32 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".fragment.RequestDetails"
-    android:padding="10dp">
+    android:layout_marginBottom="?attr/actionBarSize">
+
+    <RelativeLayout
+        android:id="@+id/detailsHeader"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_bg_account"
+            android:layout_alignTop="@+id/inNeedCredentialsLayout"
+            android:layout_alignBottom="@+id/inNeedCredentialsLayout"
+            android:layout_alignStart="@+id/inNeedCredentialsLayout"
+            android:layout_alignEnd="@+id/inNeedCredentialsLayout"/>
+
+        <LinearLayout
+            android:id="@+id/inNeedCredentialsLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:paddingHorizontal="30dp"
+            android:paddingVertical="40dp">
+
+            <TextView
+                android:id="@+id/detailsAuth"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_regular"
+                android:text="autor"
+                android:textColor="@color/white"
+                android:textSize="24sp" />
+
+            <RatingBar
+                android:id="@+id/inNeedRating"
+                style="@style/RatingTheme"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numStars="5" />
+
+            <Button
+                android:id="@+id/goToInNeedProfileBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button"
+                android:backgroundTint="@color/secondary"
+                android:padding="10dp"
+                android:text="Zobacz profil"
+                android:textColor="@color/white" />
+        </LinearLayout>
+    </RelativeLayout>
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/detailsTitle"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:padding="20dp"
+        android:background="@drawable/shadow_card"
+        android:elevation="5dp"
+        android:layout_below="@id/detailsHeader"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/detailsAuth"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/detailsTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:fontFamily="@font/montserrat_medium"
+            android:layout_below="@+id/detailsHeader"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="5dp"/>
 
-    <TextView
-        android:id="@+id/detailsDesc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/detailsDesc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:fontFamily="@font/montserrat_regular"
+            android:layout_below="@+id/detailsTitle"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"/>
+
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/detailsOfferToHelp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/offer_to_help" />
+        android:text="@string/offer_to_help"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="10dp"
+        android:textColor="@color/white"
+        android:textSize="14sp"
+        android:fontFamily="@font/montserrat_regular"
+        android:background="@drawable/button"
+        android:backgroundTint="@color/secondary" />
 
-</LinearLayout>
+</RelativeLayout>
