--- a/app/src/main/res/layout/request_chat_row.xml
+++ b/app/src/main/res/layout/request_chat_row.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_margin="10dp"
+    android:padding="10dp"
+    android:background="@drawable/shadow_card"
+    android:elevation="5dp">
 
             <ImageView
                 android:id="@+id/requestChatRowCategory"
@@ -30,6 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
+                android:fontFamily="@font/montserrat_medium"
                 android:text="TextView" />
 
             <TextView
@@ -39,7 +38,8 @@
                 app:layout_constraintTop_toBottomOf="@id/requestChatRowTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textSize="16sp" />
 
             <ImageButton
                 android:id="@+id/requestChatRowButton"
@@ -48,7 +48,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@android:drawable/stat_notify_chat" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+                app:srcCompat="@android:drawable/stat_notify_chat"
+                android:background="@color/white"
+                android:tint="@color/secondary"
+                android:layout_margin="10dp"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
