--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -140,23 +140,19 @@
             android:textSize="14sp"
             android:fontFamily="@font/montserrat_regular" />
 
+        <Button
+            android:id="@+id/chatFinish"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="@string/finish"
+            android:textColor="@color/white"
+            android:fontFamily="@font/montserrat_regular"
+            android:visibility="gone"
+            android:background="@drawable/button"
+            android:backgroundTint="@color/pDark"
+            android:layout_margin="10dp" />
+
     </LinearLayout>
-
-
-
-    <Button
-        android:id="@+id/chatFinish"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/finish"
-        android:textColor="@color/white"
-        android:fontFamily="@font/montserrat_regular"
-        android:visibility="gone"
-        android:background="@drawable/button"
-        android:backgroundTint="@color/pDark"
-        android:layout_margin="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
