--- a/app/src/main/res/layout/fragment_account_reputation.xml
+++ b/app/src/main/res/layout/fragment_account_reputation.xml
@@ -5,6 +5,7 @@
     android:id="@+id/frameLayout3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="?attr/actionBarSize"
     android:orientation="vertical"
     tools:context=".fragment.AssessFragment"
     android:gravity="center">
