--- a/app/src/main/res/layout/fragment_accepted_requests.xml
+++ b/app/src/main/res/layout/fragment_accepted_requests.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.AcceptedRequestsFragment">
+    tools:context=".fragment.AcceptedRequestsFragment"
+    android:layout_marginBottom="?attr/actionBarSize">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/acceptedRequestsRecycler"
