--- a/app/src/main/res/layout/fragment_my_requests.xml
+++ b/app/src/main/res/layout/fragment_my_requests.xml
@@ -5,7 +5,8 @@
     android:id="@+id/frameLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.MyRequestsFragment">
+    tools:context=".fragment.MyRequestsFragment"
+    android:layout_marginBottom="?attr/actionBarSize">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/myRequestsRecycler"
