implemented create request forms

--- a/app/src/main/res/layout/fragment_create_request.xml
+++ b/app/src/main/res/layout/fragment_create_request.xml
@@ -101,7 +101,7 @@
 
 
         <LinearLayout
-            android:id="@+id/createRequestShoppingList"
+            android:id="@+id/createRequestForm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
