--- a/app/src/main/res/navigation/volunteer_nav_graph.xml
+++ b/app/src/main/res/navigation/volunteer_nav_graph.xml
@@ -100,7 +100,9 @@
             android:id="@+id/action_chatFragment2_to_accountReputationFragment"
             app:destination="@id/accountReputationFragment"
             app:enterAnim="@anim/from_left"
-            app:exitAnim="@anim/from_right" />
+            app:exitAnim="@anim/from_right"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/from_right" />
     </fragment>
     <fragment
         android:id="@+id/assessFragment2"
