--- a/app/src/main/res/layout/fragment_assess.xml
+++ b/app/src/main/res/layout/fragment_assess.xml
@@ -21,6 +21,7 @@
     <RatingBar
         android:id="@+id/assessRatingBar"
         style="@style/RatingTheme"
+        android:isIndicator="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
